[project]
name = "cpp-symbol-parser"
description = "Parser for mangled C++ symbols"
authors = [
    {name = "Vegard Storheil Eriksen", email = "zyp@jvnv.net"},
]
dependencies = [
    "lark>=1.1.9",
]
requires-python = ">=3.10"
dynamic = ["version"]
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
